@@ -1,34 +1,91 @@
 package jozsef.eros.com.mylibrary;
 
-import static org.mockito.Mockito.*;
-import static org.junit.jupiter.api.Assertions.*;
-import org.junit.jupiter.api.Test;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.beans.factory.annotation.Autowired;
-import java.util.List;
 import jozsef.eros.com.mylibrary.model.Lending;
 import jozsef.eros.com.mylibrary.repository.LendingRepository;
 import jozsef.eros.com.mylibrary.service.LendingService;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 
-@SpringBootTest
-public class LendingServiceTest {
-/*
-    @Autowired
-    private LendingService lendingService;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
-    @Autowired
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
+class LendingServiceTest {
+
+    @Mock
     private LendingRepository lendingRepository;
 
-    @Test
-    public void testGetAllLendings() {
+    @InjectMocks
+    private LendingService lendingService;
 
-        when(lendingRepository.findAll()).thenReturn(List.of(new Lending(), new Lending()));
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+    }
+
+    @Test
+    void testGetAllLendings() {
+        Lending lending = new Lending();
+        when(lendingRepository.findAll()).thenReturn(Collections.singletonList(lending));
 
         List<Lending> lendings = lendingService.getAllLendings();
 
-        assertEquals(2, lendings.size());
+        assertNotNull(lendings);
+        assertEquals(1, lendings.size());
+        verify(lendingRepository, times(1)).findAll();
     }
 
- */
-}
+    @Test
+    void testGetLendingById() {
+        Long id = 1L;
+        Lending lending = new Lending();
+        when(lendingRepository.findById(id)).thenReturn(Optional.of(lending));
 
+        Lending foundLending = lendingService.getLendingById(id);
+
+        assertNotNull(foundLending);
+        verify(lendingRepository, times(1)).findById(id);
+    }
+
+    @Test
+    void testCreateLending() {
+        Lending lending = new Lending();
+        when(lendingRepository.save(lending)).thenReturn(lending);
+
+        Lending createdLending = lendingService.createLending(lending);
+
+        assertNotNull(createdLending);
+        verify(lendingRepository, times(1)).save(lending);
+    }
+
+    @Test
+    void testUpdateLending() {
+        Long id = 1L;
+        Lending existingLending = new Lending();
+        Lending updatedLendingDetails = new Lending();
+        when(lendingRepository.findById(id)).thenReturn(Optional.of(existingLending));
+        when(lendingRepository.save(existingLending)).thenReturn(existingLending);
+
+        Lending updatedLending = lendingService.updateLending(id, updatedLendingDetails);
+
+        assertNotNull(updatedLending);
+        verify(lendingRepository, times(1)).findById(id);
+        verify(lendingRepository, times(1)).save(existingLending);
+    }
+
+    @Test
+    void testDeleteLending() {
+        Long id = 1L;
+        doNothing().when(lendingRepository).deleteById(id);
+
+        lendingService.deleteLending(id);
+
+        verify(lendingRepository, times(1)).deleteById(id);
+    }
+}
